[package]
name = "s3cli_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
hmac = "0.12.1"
sha2 = "0.10.8"
minreq = { version = "2.11.0", features = ["https"] }
hex_encode_rust = { git = "https://github.com/sergz72/hex_encode_rust.git"}
base64_light = "0.1.5"
md5 = "0.7.0"
